# ha-ha

./: .gitignore  .mcp.json  .staticrypt.json  generate-sic-q-presupuesto.js  package-lock.json  package.json  prueba-desde-móvil.md
.claude/: settings.json
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace.json
.obsidian/snippets/: ha-logo.css  ha-theme.css
00-ha-ha-root/agent_memory/: BOOT.md  agent-teams-by-project.md  claude-code-memory.md  context.md  directives.md  evolution-log.md  git-sync-note.md  ha-agentic-conversation.sh  ha-calendar.sh  ha-knowledge-system.md  ha-mail.sh  ha-syntax.md  legados.md  score.md  style-guide.md  working-memory.md  you-are-ha.md
00-ha-ha-root/conversations/: ha-as-discipline-vision.md  reflections-ha-value-and-experience.md  sic-q-structure-implementation-log.md  strategic-advisor-session.md
00-ha-ha-root/framework/: ha-root-agent.md
00-ha-ha-root/navigation/: ha-central-hub.md  ha-map-of-content.md
00-ha-ha-root/reference/: vault-overview-and-summary.md
01-legacy/: agent-ha-legacy.md  ha-root.md
03-learning/: agent-ha-learning.md  evaluacion-estructura-oscar.md  ha-estructura-integrada.md
04-technology/: agent-ha-technology.md
05-context/: agent-ha-context.md  al  research  tec
06-projects/: dashboard.md  panorama-update.md  projects-board.md  writing-lab.md
06-projects/ha-products/06-projects/mara-codex/04-technology/mara-app/src-tauri/: Cargo.toml  tauri.conf.json
06-projects/ha-products/06-projects/mara-codex/04-technology/mara-app/src-tauri/src/: main.rs
(+1671 files in other folders)
