[package]
name = "mara"
version = "0.1.0"
description = "Mara local-first fractal cockpit"
authors = ["Horizons Architecture"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
walkdir = "2.5.0"
